--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.1.1
   syncfusion_flutter_pdfviewer: ^20.4.54
+  firebase_core: ^2.29.0
 
 dev_dependencies:
   flutter_test:
