--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,9 +6,12 @@ buildscript {
     }
 
     dependencies {
+        // START: FlutterFire Configuration
+        classpath 'com.google.gms:google-services:4.3.15'
+        // END: FlutterFire Configuration
         classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.google.gms.google-services:4.4.1"
+        
     }
 }
 
