--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.1.1
   syncfusion_flutter_pdfviewer: ^20.4.54
   firebase_core: ^2.29.0
+  firebase_auth: ^4.19.1
 
 dev_dependencies:
   flutter_test:
