--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,11 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.1.1
   syncfusion_flutter_pdfviewer: ^20.4.54
-  firebase_core: ^2.29.0
-  firebase_auth: ^4.19.1
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  firebase_database: ^10.4.0
+  cached_network_image: ^3.3.1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
